--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,83 +17,89 @@ add_executable(2024_I2P2_TowerDefense_with_answer
         Engine/Allegro5Exception.hpp
         Engine/AudioHelper.cpp
         Engine/AudioHelper.hpp
-        Bullet/Bullet.cpp
-        Bullet/Bullet.hpp
-        Engine/Collider.cpp
-        Engine/Collider.hpp
-        UI/Animation/DirtyEffect.cpp
-        UI/Animation/DirtyEffect.hpp
-        Enemy/Enemy.cpp
-        Enemy/Enemy.hpp
-        UI/Animation/ExplosionEffect.cpp
-        UI/Animation/ExplosionEffect.hpp
-        Bullet/FireBullet.cpp
-        Bullet/FireBullet.hpp
         Engine/GameEngine.cpp
         Engine/GameEngine.hpp
         Engine/Group.cpp
         Engine/Group.hpp
         Engine/IControl.cpp
         Engine/IControl.hpp
-        UI/Component/Image.cpp
-        UI/Component/Image.hpp
-        UI/Component/ImageButton.cpp
-        UI/Component/ImageButton.hpp
+        Engine/Collider.cpp
+        Engine/Collider.hpp
         Engine/IObject.cpp
         Engine/IObject.hpp
         Engine/IScene.cpp
         Engine/IScene.hpp
-        UI/Component/Label.cpp
-        UI/Component/Label.hpp
-        Bullet/LaserBullet.cpp
-        Bullet/LaserBullet.hpp
-        Turret/LaserTurret.cpp
-        Turret/LaserTurret.hpp
         Engine/LOG.cpp
         Engine/LOG.hpp
-        Scene/LoseScene.cpp
-        Scene/LoseScene.hpp
-        Turret/MachineGunTurret.cpp
-        Turret/MachineGunTurret.hpp
-        main.cpp
-        Bullet/MissileBullet.cpp
-        Bullet/MissileBullet.hpp
-        Turret/MissileTurret.cpp
-        Turret/MissileTurret.hpp
-        UI/Animation/Plane.cpp
-        UI/Animation/Plane.hpp
-        Enemy/PlaneEnemy.cpp
-        Enemy/PlaneEnemy.hpp
-        Scene/PlayScene.cpp
-        Scene/PlayScene.hpp
         Engine/Point.cpp
         Engine/Point.hpp
         Engine/Resources.cpp
         Engine/Resources.hpp
-        UI/Component/Slider.cpp
-        UI/Component/Slider.hpp
-        Enemy/SoldierEnemy.cpp
-        Enemy/SoldierEnemy.hpp
         Engine/Sprite.cpp
         Engine/Sprite.hpp
-        Scene/StageSelectScene.cpp
-        Scene/StageSelectScene.hpp
+        Bullet/Bullet.cpp
+        Bullet/Bullet.hpp
+        Bullet/FireBullet.cpp
+        Bullet/FireBullet.hpp
+        Bullet/LaserBullet.cpp
+        Bullet/LaserBullet.hpp
+        Bullet/MissileBullet.cpp
+        Bullet/MissileBullet.hpp
+        Bullet/EmptyBullet.cpp
+        Bullet/EmptyBullet.hpp
+        UI/Animation/DirtyEffect.cpp
+        UI/Animation/DirtyEffect.hpp
+        UI/Animation/ExplosionEffect.cpp
+        UI/Animation/ExplosionEffect.hpp
+        UI/Component/Image.cpp
+        UI/Component/Image.hpp
+        UI/Component/ImageButton.cpp
+        UI/Component/ImageButton.hpp
+        UI/Component/Label.cpp
+        UI/Component/Label.hpp
+        UI/Animation/Plane.cpp
+        UI/Animation/Plane.hpp
+        UI/Component/Slider.cpp
+        UI/Component/Slider.hpp
+        Enemy/Enemy.cpp
+        Enemy/Enemy.hpp
+        Enemy/SoldierEnemy.cpp
+        Enemy/SoldierEnemy.hpp
+        Enemy/PlaneEnemy.cpp
+        Enemy/PlaneEnemy.hpp
         Enemy/TankEnemy.cpp
         Enemy/TankEnemy.hpp
+        Enemy/RoadRollerEnemy.cpp
+        Enemy/RoadRollerEnemy.hpp
+        Turret/LaserTurret.cpp
+        Turret/LaserTurret.hpp
+        Turret/MachineGunTurret.cpp
+        Turret/MachineGunTurret.hpp
+        Turret/MissileTurret.cpp
+        Turret/MissileTurret.hpp
+        Turret/DeleteTurret.cpp
+        Turret/DeleteTurret.hpp
+        Turret/EmptyTurret.hpp
+        Turret/EmptyTurret.cpp
         Turret/Turret.cpp
         Turret/Turret.hpp
         Turret/TurretButton.cpp
         Turret/TurretButton.hpp
+        Scene/LoseScene.cpp
+        Scene/LoseScene.hpp
+        Scene/PlayScene.cpp
+        Scene/PlayScene.hpp
+        Scene/StageSelectScene.cpp
+        Scene/StageSelectScene.hpp
         Scene/WinScene.cpp
         Scene/WinScene.hpp
-
-        # TODO: [HACKATHON-1-SCENE] (2/4) Add the new scene source files here
         Scene/StartScene.cpp
-        Scene/StartScene.h
+        Scene/StartScene.hpp
         Scene/SettingsScene.cpp
         Scene/SettingsScene.hpp
-#        UI/Component/TextInput.cpp
-#        UI/Component/TextInput.hpp
+        Scene/ScoreScene.hpp
+        Scene/ScoreScene.cpp
+        main.cpp
 )
 
 find_package(PkgConfig)
